--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 script: ./gradlew build
 deploy:
   provider: releases
-  api_key: "GITHUB OAUTH TOKEN"
+  api_key: ${OAUTH_TOKEN}
   file_glob: true
   file: ./build/libs/*
   skip_cleanup: true
