--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: ./gradlew build --build-cache
+script: ./gradlew build
 deploy:
   provider: releases
   api_key: ${OAUTH_TOKEN}
