--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: java
-script: ./gradlew build
+before_script:
+- chmod +x gradlew
+script:
+- ./gradlew check
+- ./gradlew codeCoverageReport
+- ./gradlew build
+after_success:
+- bash <(curl -s https://codecov.io/bash)
 deploy:
   provider: releases
   api_key: ${OAUTH_TOKEN}
