--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,9 @@ deploy:
   provider: releases
   api_key: ${OAUTH_TOKEN}
   file_glob: true
-  file: ./build/libs/*
+  file:
+  - ./build/libs/*
+  - ./build/pom.xml
   skip_cleanup: true
   on:
     tags: true
