--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,4 +14,4 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
         dir
-        gradlew clean build
+        gradlew.bat clean build
